# communication-rust

./: .env  Cargo.toml  README.md  latency_graph.py  receiver.sh  run.sh  sender.sh  test.py
src/: audio_decoder.rs  audio_encoder.rs  lib.rs  main-encoder.rs  main.rs  mod.rs  receiver.rs  sender.rs  video_capture.rs
src/audio/: audio_capture.rs  audio_decoder.rs  audio_encoder.rs  audio_player.rs  audio_utils.rs  mod.rs
src/codecs/: audio_decoder.rs  audio_encoder.rs  mod.rs
src/front_connection/: front_protocol.rs  front_protocol_const.rs  mod.rs
src/gstreamer_pipeline/: av_capture.rs  av_player.rs  mod.rs
src/input/: input_capture.rs  input_const.rs  mod.rs
src/output/: button_controller.rs  keyboard_controller.rs  mod.rs  mouse_controller.rs  output_const.rs  output_controller.rs
src/services/: mod.rs  receiver.rs  sender.rs  sender_utils.rs
src/sound/: audio_capture.rs  audio_const.rs  audio_player.rs  mod.rs
src/utils/: common_utils.rs  error_tracker.rs  gstreamer_utils.rs  latency_const.rs  mod.rs  shutdown.rs  utils.rs  webrtc_const.rs
src/video/: mod.rs  video_capture.rs  video_const.rs  video_player.rs  video_utils.rs
src/webrtc/: communication.rs  receiver.rs  sender.rs
src/webrtcommunication/: communication.rs  latency.rs  mod.rs  test.py
src/webrtcommunication/data/: 2024-06-03_18-41-02.txt  test.txt
src/websocketprotocol/: mod.rs  socket_protocol.rs  socket_protocol_const.rs  websocketprotocol.rs
