[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.111"
tokio = "1.35.1"
webrtc = "0.9.0"
base64 = "0.21.7"
cpal = "0.15.2"
hound = "3.5.1"
opus-rust = "0.1.1"
log = "0.4.18"
dotenv = "0.15.0"
anyhow = "1.0.79"


 [[bin]]
 name = "Sender"
 path = "src/sender.rs"

 [[bin]]
 name = "Receiver"
 path = "src/receiver.rs"

